tesys_tagboard/theme/static_src/src/styles.css
@import "tailwindcss";
@source "../../templates/**/*.{html,js}";
@source "../../../**/*.{html,py,js}";
@plugin "@tailwindcss/forms";
@plugin "@tailwindcss/aspect-ratio";
@plugin "@tailwindcss/typography";

@plugin "daisyui" {
  themes: all;
  root: ":root";
  logs: true;
}


@plugin "daisyui/theme" {
  /* Based on DaisyUI's "winter" theme */
  name: "light";
  default: false;
  prefersdark: false;
  color-scheme: light;

  --color-base-100: oklch(100% 0 0);
  --color-base-200: oklch(97.466% 0.011 259.822);
  --color-base-300: oklch(93.268% 0.016 262.751);
  --color-base-content: oklch(41.886% 0.053 255.824);
  --color-primary: oklch(56.86% 0.255 257.57);
  --color-primary-content: oklch(91.372% 0.051 257.57);
  --color-secondary: oklch(42.551% 0.161 282.339);
  --color-secondary-content: oklch(88.51% 0.032 282.339);
  --color-accent: oklch(59.939% 0.191 335.171);
  --color-accent-content: oklch(11.988% 0.038 335.171);
  --color-neutral: oklch(19.616% 0.063 257.651);
  --color-neutral-content: oklch(83.923% 0.012 257.651);
  --color-info: oklch(88.127% 0.085 214.515);
  --color-info-content: oklch(17.625% 0.017 214.515);
  --color-success: oklch(80.494% 0.077 197.823);
  --color-success-content: oklch(16.098% 0.015 197.823);
  --color-warning: oklch(89.172% 0.045 71.47);
  --color-warning-content: oklch(17.834% 0.009 71.47);
  --color-error: oklch(73.092% 0.11 20.076);
  --color-error-content: oklch(14.618% 0.022 20.076);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}

@plugin "daisyui/theme" {
  name: "dark";
  default: false;
  prefersdark: true;
  color-scheme: dark;

  --color-base-100: oklch(28.822% 0.022 277.508);
  --color-base-200: oklch(26.805% 0.02 277.508);
  --color-base-300: oklch(24.787% 0.019 277.508);
  --color-base-content: oklch(97.747% 0.007 106.545);

  --color-primary: oklch(74.202% 0.148 301.883);
  --color-primary: oklch(0.7032 0.146 294.36);
  --color-primary: oklch(0.7388 0.0966 291.18);
  --color-primary-content: oklch(0.2162 0.0271 351.09);
  --color-secondary: oklch(75.461% 0.183 346.812);
  --color-secondary: oklch(0.7613 0.1291 360);
  --color-secondary-content: oklch(14.84% 0.029 301.883);
  --color-accent: oklch(83.392% 0.124 66.558);
  --color-accent-content: oklch(16.678% 0.024 66.558);
  --color-neutral: oklch(39.445% 0.032 275.524);
  --color-neutral-content: oklch(87.889% 0.006 275.524);
  --color-info: oklch(88.263% 0.093 212.846);
  --color-info-content: oklch(17.652% 0.018 212.846);
  --color-success: oklch(87.099% 0.219 148.024);
  --color-success-content: oklch(17.419% 0.043 148.024);
  --color-warning: oklch(95.533% 0.134 112.757);
  --color-warning-content: oklch(19.106% 0.026 112.757);
  --color-error: oklch(68.22% 0.206 24.43);
  --color-error-content: oklch(13.644% 0.041 24.43);
  --radius-selector: 1rem;
  --radius-field: 0.5rem;
  --radius-box: 1rem;
  --size-selector: 0.25rem;
  --size-field: 0.25rem;
  --border: 1px;
  --depth: 0;
  --noise: 0;
}


@font-face {
  font-family: "Komikula";
  font-style: normal;
  font-weight: 400;
  font-display: block;

  src:
    local("Komikula"),
    url("/static/fonts/komikula/Komikula.otf") format("opentype");
}

@font-face {
  font-family: "Pak Kumis";
  font-style: normal;
  font-weight: 400;
  font-display: block;

  src:
    url("/static/fonts/pak_kumis/Pak Kumis.otf") format("opentype");
}

@utility text-placeholder {
  @apply opacity-70 italic
}

@utility input {
  @apply focus:outline-none focus:border-2;
}

@layer base {
  h1 {
    @apply text-4xl font-bold mt-3 mb-1 font-heading tracking-widest;
  }

  h2 {
    @apply text-3xl font-bold mt-3 mb-1 font-heading tracking-widest;
  }

  h3 {
    @apply text-2xl font-bold mt-3 mb-1 font-heading tracking-widest;
  }

  ul:not(.dropdown-content) {
    @apply list-disc list-outside ms-5;
  }

  li {
    @apply leading-7;
  }

  a:not(.link) {
    @apply border-b-2 border-b-accent;
  }

  a:not(.link):hover {
    @apply bg-accent text-accent-content transition duration-100 ease-in-out;
  }

  p {
    @apply leading-6 mb-3;
  }

  code {
    @apply bg-neutral text-neutral-content pt-1;
  }
}

@layer components {
  .form {
    display: flex;
    flex-direction: column;
    gap: --spacing(4);
    background-color: var(--color-base-300);
    width: 100%;
    padding: --spacing(10) --spacing(8);
    border-radius: var(--radius-box);
    max-width: var(--container-lg);
    box-shadow: var(--shadow-xl);

    & label {
      font-size: var(-text-sm);

      & + input {
        margin-top: --spacing(1);
      }
    }
  }
}

@theme {
  /* Fonts and Text */
  --text-sm: 0.8rem;
  --text-base: 1.0rem;
  --text-lg: 1.25rem;
  --text-xl: 1.4rem;
  --text-2xl: 1.7rem;
  --text-3xl: 2.2rem;
  --text-4xl: 2.55rem;
  --text-5xl: 3.65rem;
  --font-heading: "Komikula", "Pak Kumis", "Courier New", mono;

  /* Containers */
  --container-8xl: 96rem;

  /* Colors */
  --color-tag-default: #a8e6cf; /* Tag background */
  --color-tag-content: #383737; /* Tag text */
  --color-filter-func: #fceb7e; /* Post search filter items background */
  --color-user: #121212;
  --color-user-content: #ddd;

  --color-discord: #5865F2;
  --color-discord-content: oklch(0.9162 0 139.549);

  /* Keyframes */
  @keyframes fade_in {
    0% {
      opacity: 0;
    }

    100%: {
      opacity: 1;
    }
  }

  @keyframes fade_out {
    100% {
      opacity: 0;
    }
  }

  @keyframes flip180 {
    0% {
      transform: rotate(0);
    }

    100% {
      transform: rotate(-180deg);
    }
  }

  @keyframes rot90 {
    0% {
      transform: rotate(0);
    }

    100% {
      transform: rotate(90deg);
    }
  }

  @keyframes rot90_reverse {
    0% {
      transform: rotate(90deg);
    }

    100% {
      transform: rotate(0deg);
    }
  }

  @keyframes spin {
    0% {
      transform: rotate(0deg);
    }

    100% {
      transform: rotate(360deg);
    }
  }

  @keyframes spin_reverse {
    0% {
      transform: rotate(0);
    }

    100% {
      transform: rotate(-360deg);
    }
  }

  @keyframes pop_in {
    0% {
      transform: scale(0.7);
      opacity: 0;
    }

    75% {
      transform: scale(1.01);
      opacity: 0.4;
    }

    100% {
      transform: scale(1);
      opacity: 1;
    }
  }

  /* Animation */
  --animate-rot-180: flip180 0.25s linear forwards;
  --animate-rot-90: rot90 0.25s ease-in-out forwards;
  --animate-rot-90-cc: rot90_reverse 0.25s ease-in-out forwards;
  --animate-spin-slow: spin 2s linear infinite;
  --animate-spin-slow-reverse: spin_reverse 2s linear infinite;
  --animate-fade-in-slow: fade_in 3s ease-in-out forwards;
  --animate-fade-in-fast: fade_in 1.5s ease-in-out forwards;
  --animate-fade-in-very-fast: fade_in 0.4s ease-in-out forwards;
  --animate-fade-out-slow: fade_out 3s ease-in-out forwards;
  --animate-fade-out-fast: fade_out 1.5s ease-in-out forwards;
  --animate-pop-in-fast: pop_in 0.7s ease-in-out forwards;
}


.feather {
  width: var(--text-base);
  height: var(--text-base);
  stroke: currentColor;
  stroke-width: 2;
  stroke-linecap: round;
  stroke-linejoin: round;
  fill: none;
}

.feather-sm {
  width: var(--text-sm);
  height: var(--text-sm);
}

.feather-lg {
  width: var(--text-lg);
  height: var(--text-lg);
}

/* Many tags may be rendered on a single page. These styles reduce the total
rendered document size */
.tag-container>button {
  color: var(--color-tag-content);
  background-color: var(--color-tag-default);
  padding: --spacing(1) --spacing(3)
}

/* Smooth scrolling IF user doesn't have a preference due to motion sensitivities */
@media screen and (prefers-reduced-motion: no-preference) {
  html {
    scroll-behavior: smooth;
  }
}

.back-to-top-wrapper {
  position: absolute;
  top: 250vh;
  left: --spacing(2);
  bottom: 0;
  width: 3rem;
  pointer-events: none;
}

.back-to-top-link {
  position: fixed; /* fixed position fallback */
  position: sticky;
  top: calc(100dvh - var(--spacing) * 16);
  pointer-events: all;
}

